--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,19 @@
     font-family: avigea;  
 }
 
+
 .reservacion{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.formTexto {
+    display: flex;
+    justify-content: center;
+    color: #4CAF50;
+    margin-top: .9375rem;
 }
 
 .reservation-form {
@@ -65,6 +73,7 @@
     border-radius: 8px;
     max-width: 600px;
     width: 100%;
+    align-content: center;
 }
 
 .form-group {
@@ -77,9 +86,7 @@ label {
     color: #333;
 }
 
-input[type="text"],
-input[type="number"],
-input[type="date"] {
+select, input[type="number"], input[type="date"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -87,24 +94,19 @@ input[type="date"] {
     width: 100%;
 }
 
-.botonEnviar {
-    display: flex;
+.botonReservar {
     padding: 10px 15px;
-    margin: 10px;
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    justify-content: center;
+    grid-column: span 2; 
 }
 
-.formTexto {
-    display: flex;
-    justify-content: center;
-    color: #4CAF50;
-    margin-top: .9375rem;
+button:hover {
+    background-color: #45a049;
 }
 
 .serviciosBamboo {
@@ -147,9 +149,69 @@ input[type="date"] {
 
 .nav-item a{
     text-decoration: none;
-    color: white;
+    color: rgb(220, 255, 209);
 }
 
 .nav-item a:hover{
-    color: black;
+    color:#155724;
+}
+
+.card-body h4 {
+    color: #155724;
+}
+
+.reserva-resumen {
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin-top: 20px;
+    background-color: #f9f9f9;
+    display: none;
+}
+button {
+    margin: 10px;
+    padding: 8px 12px;
+}
+
+.detalle-reserva {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f3f3f3;
+    color: #333;
+    font-size: 1rem;
+}
+
+.boton {
+    margin: 10px 5px 0;
+    padding: 10px 15px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 5px;
+}
+
+.boton:hover {
+    background-color: #0056b3;
+}
+
+.mensaje {
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+.mensaje.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.mensaje.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
 }
