detalles finales de la funcion de reserva de Bamboo

--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,16 @@ button {
     color: #721c24;
     border: 1px solid #f5c6cb;
 }
+
+.clima {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    margin-top: 20px;
+    padding: 15px;
+    background-color:  #4CAF50;
+    border: 1px solid #dcdcdc;
+    border-radius: 8px;
+    font-size: 1rem;
+    color: #ffffff;
+}
